# ai-asset-generator

./: .gitmodules  Cargo.toml  build.rs  readme.md
ai_images/: cargo.toml
ai_images/src/: lib.rs
ai_images/src/cli/: mod.rs  parser.rs  provider.rs
ai_images/src/images/: mod.rs
ai_images/src/params/: prompt.rs  text_to_image.rs
ai_images/src/providers/: mod.rs
ai_images/src/providers/stable_diffusion/: mod.rs  provider.rs
ai_images/src/providers/stable_diffusion/api/: config.rs  mod.rs  model.rs  queue.rs  status.rs  txt2img.rs
asset_generator/: Cargo.toml
asset_generator/src/: main.rs
asset_generator/src/config/: mod.rs
llm_structured_response/: Cargo.toml
llm_structured_response/src/: cli.rs  lib.rs
llm_structured_response/src/cli/: mod.rs
llm_structured_response/src/providers/: llm_provider.rs  llm_providers.rs  mod.rs  ollama.rs  openai.rs  provider_config.rs
llm_structured_response/src/request/: json.rs  prompt.rs  schema.rs
llm_structured_response/tests/: providers.rs
random_phrase_generator/: Cargo.toml
random_phrase_generator/src/: lib.rs  phrase_generator.rs  weighted_items.rs
src/: lib.rs  main.rs
src/ai_images/: mod.rs
src/ai_images/cli/: parser.rs  provider.rs
src/ai_images/images/: string.rs
src/ai_images/params/: mod.rs
src/ai_images/providers/openai/: mod.rs  provider.rs
src/ai_images/providers/stable_diffusion/: provider.rs
src/ai_images/providers/stable_diffusion/api/: model.rs  queue.rs  txt2img.rs
src/assets/: building.rs  character.rs  character_schema.rs  mod.rs  waterdeep_building_schema.rs
src/assets/building/: initial_prompt.rs  mod.rs
src/assets/character/: initial_prompt.rs  mod.rs
src/assets/markdown/: mod.rs
src/assets/markdown/templates/: character.md
src/assets/random_prompts/: building.rs  character.rs  mod.rs
src/assets/schemas/: building.rs  character.rs  mod.rs
src/config/: mod.rs
src/image_generation/: mod.rs  openai.rs
src/image_generation/stable_diffusion/: mod.rs  queue.rs  requests.rs
src/json/: mod.rs
src/llm_structured_response/: cli.rs  mod.rs
src/llm_structured_response/providers/: mod.rs  openai.rs
src/llm_structured_response/request/: json.rs  mod.rs
src/markdown/: mod.rs
src/openai/: image.rs  json.rs  mod.rs  text.rs
src/random_phrase_generator/: mod.rs  phrase_generator.rs  weighted_items.rs
src/random_prompts/: building.rs  character.rs  mod.rs
src/random_prompts/weighted_random/: mod.rs
src/schemas/: character.rs
src/text_generation/: openai.rs
test/: animals.csv  cities.csv  colors.csv  example-config-ollama.toml  example-config.toml  example-template.md  example.schema.json  verbs.csv
test/ai-images/: default-config.toml  example-config.toml
tests/: config.rs
