[package]
name = "ai-asset-generator"
version = "0.4.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-openai = "0.26.0"
async-trait = "0.1.84"
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
dotenvy = "0.15.7"
minijinja = { version = "2.5.0", features = ["serde_json"] }
rand = "0.8.5"
reqwest = "0.12.12"
serde = "1.0.216"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
toml = "0.8.19"

[build-dependencies]

[dev-dependencies]
image = "0.25.5"
kamadak-exif = "0.6.1"
