[package]
name = "ai_asset_generator"
version = "0.3.0"
description = "Generates random 'assets' using AI providers. Intended to be used to generate assets for games like characters, locations, and items."
readme = "readme.md"
license = "MIT"
publish = false
authors.workspace = true
edition.workspace = true

[dependencies]
ai_images = { path = "ai_images" }
llm_structured_response = { path = "llm_structured_response" }
random_phrase_generator = { path = "random_phrase_generator" }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ex = { workspace = true }
minijinja = { version = "2.5.0", features = ["serde_json"] }
serde = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = "3.18.0"

[workspace]
resolver = "2"
members = ["ai_images", "llm_structured_response", "random_phrase_generator"]

[workspace.package]
authors = ["Thomas Young <35073576+DrakeRichards@users.noreply.github.com>"]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = "0.12.12"
serde = "1.0.216"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
toml = "0.8.19"
ex = "0.1.3"
serial_test = "3.2.0"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
