[package]
name = "llm_structured_response"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-openai = "0.26.0"
async-trait = "0.1.84"
clap = { version = "4.5.23", features = ["derive"] }
dotenvy = "0.15.7"
serde = "1.0.216"
serde_json = "1.0.134"
ollama-rs = { version = "0.2.7", git = "https://github.com/DrakeRichards/ollama-rs.git" }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
jsonschema = "0.29.0"

[build-dependencies]

[dev-dependencies]
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
serial_test = "3.2.0"

[lints.clippy]
