[package]
name = "llm_structured_response"
version = "0.2.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ollama-rs = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
jsonschema = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
serial_test = { workspace = true }

[lints]
workspace = true
