[package]
name = "llm_structured_response"
version = "0.3.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenvy = { workspace = true }
serde = { workspace = true }
llm = { version = "1.1.0", git = "https://github.com/DrakeRichards/llm.git" }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
toml = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
